--- a/StockManager/StockManager.csproj
+++ b/StockManager/StockManager.csproj
@@ -158,6 +158,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\PrinterChalansController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\PurchaseOrdersController.cs" />
     <Compile Include="Controllers\StockEntriesController.cs" />
@@ -189,17 +190,20 @@
     <Compile Include="Models\StockEntry.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\StockManager.Context.cs">
+    <Compile Include="Models\StockManager.Context.cs" />
+    <Compile Include="Models\StockManager.Context1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>StockManager.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\StockManager.cs">
+    <Compile Include="Models\StockManager.cs" />
+    <Compile Include="Models\StockManager.Designer.cs" />
+    <Compile Include="Models\StockManager1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\StockManager.Designer.cs">
+    <Compile Include="Models\StockManager1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>StockManager.edmx</DependentUpon>
@@ -292,16 +296,6 @@
     <Content Include="Content\lineicons\fonts\linecons.eot" />
     <Content Include="Content\lineicons\fonts\linecons.ttf" />
     <Content Include="Content\lineicons\fonts\linecons.woff" />
-    <Content Include="Models\StockManager.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>StockManager.edmx</DependentUpon>
-      <LastGenOutput>StockManager.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Models\StockManager.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>StockManager.edmx</DependentUpon>
-      <LastGenOutput>StockManager.cs</LastGenOutput>
-    </Content>
     <Content Include="Scripts\js\bootstrap-datetimepicker.js" />
     <Content Include="Scripts\js\bootstrap-inputmask\bootstrap-inputmask.min.js" />
     <Content Include="Scripts\js\bootstrap-switch.js" />
@@ -442,12 +436,18 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Models\StockManager.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>StockManager.Context1.cs</LastGenOutput>
+    </Content>
     <EntityDeploy Include="Models\StockManager.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>StockManager.Designer.cs</LastGenOutput>
+      <LastGenOutput>StockManager1.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="Models\StockManager.edmx.diagram">
-      <DependentUpon>StockManager.edmx</DependentUpon>
+    <Content Include="Models\StockManager.edmx.diagram" />
+    <Content Include="Models\StockManager.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>StockManager1.cs</LastGenOutput>
     </Content>
     <None Include="Properties\PublishProfiles\StockManager.pubxml" />
     <Content Include="Views\PurchaseOrders\Create.cshtml" />
@@ -455,6 +455,10 @@
     <Content Include="Views\PurchaseOrders\Index.cshtml" />
     <Content Include="Views\PurchaseOrders\Details.cshtml" />
     <Content Include="Views\Shared\_LayoutModelPopup.cshtml" />
+    <Content Include="Views\PrinterChalans\Create.cshtml" />
+    <Content Include="Views\PrinterChalans\Details.cshtml" />
+    <Content Include="Views\PrinterChalans\Edit.cshtml" />
+    <Content Include="Views\PrinterChalans\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
