--- a/StockManager/Web.config
+++ b/StockManager/Web.config
@@ -58,5 +58,7 @@
       <add name="BundleModule" type="System.Web.Optimization.BundleModule" />
     </modules>
   </system.webServer>
-  
-<connectionStrings><add name="StockManagerEntities" connectionString="metadata=res://*/Models.StockManager.csdl|res://*/Models.StockManager.ssdl|res://*/Models.StockManager.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MRITYUNJAYA-T\SQLSERVER12;initial catalog=StockManager;user id=sa;password=ciitdc#123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="StockManagerEntities" connectionString="metadata=res://*/Models.StockManager.csdl|res://*/Models.StockManager.ssdl|res://*/Models.StockManager.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MRITYUNJAYA-T\SQLSERVER12;initial catalog=StockManager;user id=sa;password=ciitdc#123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
