User login, list, edit, details and delete

--- a/StockManager/StockManager.csproj
+++ b/StockManager/StockManager.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\StockEntriesController.cs" />
     <Compile Include="Controllers\TailorChalanController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\VendorsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -184,6 +185,7 @@
     <Compile Include="Models\ChalanType.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\CheckAuth.cs" />
     <Compile Include="Models\FinancialYear.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
@@ -193,6 +195,7 @@
     <Compile Include="Models\InvoiceMaster.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\LoginVM.cs" />
     <Compile Include="Models\PrinterChalan.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
@@ -253,6 +256,7 @@
     <Compile Include="Models\User.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserExtend.cs" />
     <Compile Include="Models\USP_ProductWiseStock_Result.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
@@ -318,6 +322,7 @@
     <Content Include="Content\lineicons\index.html" />
     <Content Include="Content\lineicons\lte-ie7.js" />
     <Content Include="Content\lineicons\style.css" />
+    <Content Include="Content\main.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -460,6 +465,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Downloads\" />
+    <Folder Include="Views\Auth\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -524,6 +530,12 @@
     <Content Include="Views\Invoices\Details.cshtml" />
     <Content Include="Views\Invoices\Edit.cshtml" />
     <Content Include="Views\Invoices\Index.cshtml" />
+    <Content Include="Views\Users\Create.cshtml" />
+    <Content Include="Views\Users\Delete.cshtml" />
+    <Content Include="Views\Users\Details.cshtml" />
+    <Content Include="Views\Users\Edit.cshtml" />
+    <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Users\Login.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
