--- a/StockManager/Web.config
+++ b/StockManager/Web.config
@@ -16,6 +16,9 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Login" timeout="2880" />
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -59,6 +62,5 @@
     </modules>
   </system.webServer>
   <connectionStrings>
-    <add name="StockManagerEntities" connectionString="metadata=res://*/Models.StockManager.csdl|res://*/Models.StockManager.ssdl|res://*/Models.StockManager.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WALEED-PC\SQLEXPRESS;initial catalog=StockManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="StockManagerEntities" connectionString="metadata=res://*/Models.StockManager.csdl|res://*/Models.StockManager.ssdl|res://*/Models.StockManager.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WALEED-PC\SQLEXPRESS;initial catalog=StockManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
