--- a/StockManager/Web.config
+++ b/StockManager/Web.config
@@ -9,6 +9,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="SMTP_HOST" value="smtp.gmail.com" />
+    <add key="SMTP_EMAIL" value="devwaleed@gmail.com" />
+    <add key="SMTP_PASSWORD" value="YOUR_PASSWORD" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -62,5 +65,6 @@
     </modules>
   </system.webServer>
   <connectionStrings>
-  <add name="StockManagerEntities" connectionString="metadata=res://*/Models.StockManager.csdl|res://*/Models.StockManager.ssdl|res://*/Models.StockManager.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WALEED-PC\SQLEXPRESS;initial catalog=StockManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="StockManagerEntities" connectionString="metadata=res://*/Models.StockManager.csdl|res://*/Models.StockManager.ssdl|res://*/Models.StockManager.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WALEED-PC\SQLEXPRESS;initial catalog=StockManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
