--- a/StockManager/StockManager.csproj
+++ b/StockManager/StockManager.csproj
@@ -171,6 +171,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\InvoicesController.cs" />
+    <Compile Include="Controllers\PrintJobWorkReceivedController.cs" />
     <Compile Include="Controllers\PrinterChalansController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\PurchaseOrdersController.cs" />
@@ -201,6 +202,12 @@
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\PrinterChalanDetail.cs">
+      <DependentUpon>StockManager.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PrintJobWorkReceived.cs">
+      <DependentUpon>StockManager.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PrintJobWorkReceivedDetail.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Product.cs">
@@ -539,6 +546,10 @@
     <Content Include="Views\Users\Login.cshtml" />
     <Content Include="Views\Users\ForgotPassword.cshtml" />
     <Content Include="Views\Users\ResetPassword.cshtml" />
+    <Content Include="Views\PrintJobWorkReceived\Create.cshtml" />
+    <Content Include="Views\PrintJobWorkReceived\Details.cshtml" />
+    <Content Include="Views\PrintJobWorkReceived\Edit.cshtml" />
+    <Content Include="Views\PrintJobWorkReceived\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
