Database Clean Up

--- a/StockManager/Web.config
+++ b/StockManager/Web.config
@@ -64,7 +64,5 @@
       <add name="BundleModule" type="System.Web.Optimization.BundleModule" />
     </modules>
   </system.webServer>
-  <connectionStrings>
-    <add name="StockManagerEntities" connectionString="metadata=res://*/Models.StockManager.csdl|res://*/Models.StockManager.ssdl|res://*/Models.StockManager.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-K0DFQCFE\SQLEXPRESS01;initial catalog=StockManagerNew;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+  
+<connectionStrings><add name="StockManagerEntities" connectionString="metadata=res://*/Models.StockManagerEntities.csdl|res://*/Models.StockManagerEntities.ssdl|res://*/Models.StockManagerEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-K0DFQCFE\SQLEXPRESS01;initial catalog=StockManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
