changes 24 nov model

--- a/StockManager/Web.config
+++ b/StockManager/Web.config
@@ -65,6 +65,6 @@
     </modules>
   </system.webServer>
   <connectionStrings>
-    <add name="StockManagerEntities" connectionString="metadata=res://*/Models.StockManager.csdl|res://*/Models.StockManager.ssdl|res://*/Models.StockManager.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MRITYUNJAYA-T\SQLSERVER12;initial catalog=StockManagerPro;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="StockManagerEntities" connectionString="metadata=res://*/Models.StockManager.csdl|res://*/Models.StockManager.ssdl|res://*/Models.StockManager.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MRITYUNJAYA-T\SQLSERVER12;initial catalog=StockManagerPro;user id=sa;password=ciitdc#123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
