including gitignore in solution and purchase orders create form

--- a/StockManager/StockManager.csproj
+++ b/StockManager/StockManager.csproj
@@ -278,6 +278,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".gitignore" />
     <Content Include="assets\global\css\components-md.css" />
     <Content Include="assets\global\css\components-md.min.css" />
     <Content Include="assets\global\css\components-rounded.css" />
