--- a/StockManager/StockManager.csproj
+++ b/StockManager/StockManager.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Controllers\TailorChalanSendController.cs" />
     <Compile Include="Controllers\TailorChalanController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\VendorsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -687,6 +688,11 @@
     <None Include="Views\Shared\dashboard.cshtml" />
     <None Include="Views\Shared\dashboard\sidebar.cshtml" />
     <None Include="Views\Shared\dashboard\topnav.cshtml" />
+    <Content Include="Views\Customers\Create.cshtml" />
+    <Content Include="Views\Customers\Delete.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Customers\Edit.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
