--- a/StockManager/StockManager.csproj
+++ b/StockManager/StockManager.csproj
@@ -269,6 +269,9 @@
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\UserExtend.cs" />
+    <Compile Include="Models\UserRole.cs">
+      <DependentUpon>StockManager.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\USP_ProductWiseStock_Result.cs">
       <DependentUpon>StockManager.tt</DependentUpon>
     </Compile>
